--- a/src/main/resources/static/scss/pages/admin/board/notice/_notice-detail.scss
+++ b/src/main/resources/static/scss/pages/admin/board/notice/_notice-detail.scss
@@ -1,6 +1,6 @@
-@import "../../../abstracts/variables";
+@import "../../../../abstracts/variables";
 
-.notice-detail-body {
+.admin-notice-detail-body {
     .table-box {
         width: 100%;
         border-bottom: 1px solid #e5e5e5;
