--- a/src/main/resources/static/scss/base/_reset.scss
+++ b/src/main/resources/static/scss/base/_reset.scss
@@ -55,6 +55,10 @@ input[type=text], input[type=password] {
     outline: none;
 }
 
+textarea {
+    outline: none;
+}
+
 select {
     height: 30px;
     line-height: 29px;
