--- a/src/main/resources/static/scss/pages/admin/board/notice/_notice-board-management.scss
+++ b/src/main/resources/static/scss/pages/admin/board/notice/_notice-board-management.scss
@@ -1,4 +1,4 @@
-@import "../../../abstracts/variables";
+@import "../../../../abstracts/variables";
 
 .notice-mng-body {
     .notice-list-container {
